[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Items/ItemController.gd" type="Script" id=1]
[ext_resource path="res://TileMaps/farmtiles.res" type="TileSet" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.92323, 9.03359 )

[node name="Item" type="Node2D"]
script = ExtResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="InteractionArea" to="." method="on_body_enter"]
[connection signal="body_exited" from="InteractionArea" to="." method="on_body_exit"]
